2022-10-01T08:29:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3163831555
* notice: last 14d: unq all: 1 28
* notice: prev accum: outdated-unq outdated-all / unq all: 40 154 / 54 181
* notice: next accum: outdated-unq outdated-all / unq all: 40 154 / 55 182
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-01]

2022-10-01T02:32:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3162858246
* notice: last 14d: unq all: 1 27
* notice: prev accum: outdated-unq outdated-all / unq all: 39 151 / 54 180
* notice: next accum: outdated-unq outdated-all / unq all: 40 154 / 54 181
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2022-09-16] / [2022-09-17]

2022-09-30T16:36:20Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3160275437
* notice: last 14d: unq all: 1 29
* notice: prev accum: outdated-unq outdated-all / unq all: 39 151 / 54 180
* notice: next accum: outdated-unq outdated-all / unq all: 39 151 / 54 180
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-16 2022-09-30]

2022-09-30T08:35:16Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3157396049
* notice: last 14d: unq all: 1 29
* notice: prev accum: outdated-unq outdated-all / unq all: 39 151 / 53 180
* notice: next accum: outdated-unq outdated-all / unq all: 39 151 / 54 180
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-16 2022-09-30]

2022-09-30T02:38:41Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3155936819