@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-01T08:29:03Z",
-  "count_outdated" : 154,
-  "uniques_outdated" : 40,
-  "count" : 182,
+  "timestamp" : "2022-10-01T16:30:59Z",
+  "count_outdated" : 156,
+  "uniques_outdated" : 41,
+  "count" : 184,
   "uniques" : 55,
   "clones" : [
-    {
-      "timestamp": "2022-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-18T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
