@@ -1,3 +1,11 @@
+2022-10-01T16:30:59Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3165310871
+* notice: last 14d: unq all: 1 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 40 154 / 55 182
+* notice: next accum: outdated-unq outdated-all / unq all: 41 156 / 55 184
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-17] / [2022-10-01]
+
 2022-10-01T08:29:03Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3163831555
 * notice: last 14d: unq all: 1 28
